frontend/k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: acmefitness
spec:
  mtls:
    mode: PERMISSIVE
