frontend/k8s/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme-scg-vs
  namespace: acmefitness
spec:
  hosts:
  - acme.apps.psl.k10s.io
  http:
  - name: "scg-routes"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: acme-api-gateway.acmefitness.svc.cluster.local
